--- a/src/components/user/User.scss
+++ b/src/components/user/User.scss
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     color: #6B7280;
+    cursor: pointer;
     
     & > P {
         padding: 12px 24px;
