--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,39 @@ body {
   margin: 0 auto;
   padding: 0px 15px;
 }
+
+.alert {
+    font-size: 28px;
+    color: red;
+    text-align: center;
+    margin: 0px 0px 20px 0px;
+}
+
+.fetching {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    margin: 30px auto;
+    border: 2px dashed green;
+    animation-name: search-fetching;
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+  
+@keyframes search-fetching {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+  
+    100% {
+      transform: rotate(-360deg) scale(1.1);
+    }
+}
+
+.user-error {
+    font-size: 24px;
+    text-align: center;
+    margin: 30px 0px;
+}
