--- a/src/components/pages/item/ItemPage.scss
+++ b/src/components/pages/item/ItemPage.scss
@@ -48,6 +48,7 @@
     &__diagram {
         width: 100%;
         height: 230px;
+        margin: 0px 0px 20px 0px;
     }
 
     &__total {
@@ -91,5 +92,56 @@
         font-weight: 700;
         font-size: 18px;
         line-height: 133%;
+    }
+}
+
+@media (max-width: 768px){
+    .item {
+        padding: 50px 0px 0px 0px;
+    
+        &__border {
+            padding: 15px;
+        }
+    
+        &__row {
+            margin: 0px 0px 10px 0px;
+        }
+
+        &__title {
+            font-size: 20px;
+            margin: 0px 5px 0px 0px;
+        }
+    
+    
+        &__btn {
+            padding: 6px 10px;
+            & > button {
+                font-size: 12px;
+                letter-spacing: 0px;
+            }
+        }
+    
+        &__diagram {    
+            margin: 0px 0px 20px 0px;
+        }
+    
+    
+        &__total-text {
+            font-size: 20px;
+        }
+    
+    }
+    
+    .bottom-item {
+    
+        &__size {
+            & >:not(:last-child) {
+                margin: 0px 25px 0px 0px;
+            }
+        }
+    
+        &__text {
+            font-size: 16px;
+        }
     }
 }
