--- a/src/components/pages/list/List.scss
+++ b/src/components/pages/list/List.scss
@@ -86,9 +86,46 @@
         cursor: pointer;
         flex: 0 1 16.67%;
         position: relative;
+        text-align: left;
     }
 
     & > .user-table:not(:last-child) {
         border-bottom: 1px solid #F6F6F6;
+    }
+}
+
+@media (max-width: 768px){
+    .list {
+        padding: 50px 0px 0px 0px;
+        
+        &__input {
+            margin: 0px 0px 30px 0px;
+        }
+    
+    }
+    
+    .table {
+    
+        &__name {
+            flex: 0 1 33.333%;
+        }
+    
+        &__date {
+            flex: 1 1 33.334%;
+        }
+    
+        &__status {
+            flex: 0 1 33.333%;
+        }
+    }
+}
+
+@media (max-width: 480px){
+    .table {
+        &__main {
+            & > P {
+                padding: 10px 15px;
+            }
+        }
     }
 }
